@@ -72,8 +72,8 @@
 	infodir=%{?buildroot:%{buildroot}}%{_infodir} \\\
   install
 
-%_smp_mflags %([ -z "$RPM_BUILD_NCPUS" ] \
-	&& RPM_BUILD_NCPUS="`/usr/bin/getconf _NPROCESSORS_ONLN`"; \
+%_smp_mflags %([ -z "$RPM_BUILD_NCPUS" ] \\\
+	&& RPM_BUILD_NCPUS="`/usr/bin/getconf _NPROCESSORS_ONLN`"; \\\
 	[ "$RPM_BUILD_NCPUS" -gt 1 ] && echo "-j${RPM_BUILD_NCPUS}")
 
 @MULTILIBSTART@
